--- a/index.html
+++ b/index.html
@@ -3,6 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Meroe Advisory LLC provides strategic intelligence consulting across cybersecurity, due diligence, and organizational resilience for leaders operating in high-consequence environments.">
+  <meta name="robots" content="index,follow">
+  <meta name="author" content="Meroe Advisory LLC">
+  <link rel="canonical" href="https://meroeadvisory.com/">
+  <meta property="og:title" content="Meroe Advisory LLC | Strategic Intelligence">
+  <meta property="og:description" content="Executive-level advisory at the intersection of cybersecurity, intelligence-driven due diligence, and organizational resilience.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://meroeadvisory.com/">
+  <meta property="og:image" content="https://meroeadvisory.com/Meroe%20Advisory%20Logo.png">
+  <meta property="og:image:alt" content="Meroe Advisory LLC logo">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Meroe Advisory LLC | Strategic Intelligence">
+  <meta name="twitter:description" content="Executive-level advisory at the intersection of cybersecurity, intelligence-driven due diligence, and organizational resilience.">
+  <meta name="twitter:image" content="https://meroeadvisory.com/Meroe%20Advisory%20Logo.png">
+  <link rel="icon" type="image/png" href="Meroe Advisory Logo.png">
   <title>Mero&euml; Advisory LLC | Strategic Intelligence</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,8 +27,6 @@
       --navy-900: #0d1730;
       --navy-700: #1a2b52;
       --navy-500: #2f4478;
-      --sand-200: #f2ebe2;
-      --sand-300: #e7dac9;
       --copper: #b87c4f;
       --ink: #1b2132;
       --paper: #faf9f7;
@@ -22,13 +35,8 @@
       --shadow: 0 16px 36px rgba(13, 23, 48, 0.14);
     }
 
-    * {
-      box-sizing: border-box;
-    }
-
-    html {
-      scroll-behavior: smooth;
-    }
+    * { box-sizing: border-box; }
+    html { scroll-behavior: smooth; }
 
     body {
       margin: 0;
@@ -100,16 +108,6 @@
       box-shadow: 0 10px 20px rgba(13, 23, 48, 0.23);
     }
 
-    .domain-note {
-      margin-top: 0.75rem;
-      display: inline-block;
-      font-size: 0.8rem;
-      letter-spacing: 0.04em;
-      color: var(--navy-700);
-      text-decoration: none;
-      border-bottom: 1px dashed rgba(26, 43, 82, 0.4);
-    }
-
     .hero {
       margin-top: 2.2rem;
       display: grid;
@@ -127,17 +125,6 @@
       padding: 2.1rem;
       position: relative;
       overflow: hidden;
-    }
-
-    .hero-panel::after {
-      content: "";
-      position: absolute;
-      width: 250px;
-      height: 250px;
-      right: -105px;
-      top: -130px;
-      background: radial-gradient(circle, rgba(184, 124, 79, 0.26), transparent 72%);
-      pointer-events: none;
     }
 
     .tag {
@@ -163,6 +150,16 @@
       margin: 1rem 0 0;
       max-width: 58ch;
       font-size: 1.02rem;
+    }
+
+    .domain-note {
+      margin-top: 0.75rem;
+      display: inline-block;
+      font-size: 0.8rem;
+      letter-spacing: 0.04em;
+      color: var(--navy-700);
+      text-decoration: none;
+      border-bottom: 1px dashed rgba(26, 43, 82, 0.4);
     }
 
     .hero-actions {
@@ -336,78 +333,35 @@
     }
 
     @keyframes appear {
-      from {
-        opacity: 0;
-        transform: translateY(16px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
+      from { opacity: 0; transform: translateY(16px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     @keyframes slide-up {
-      from {
-        opacity: 0;
-        transform: translateY(24px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
+      from { opacity: 0; transform: translateY(24px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     @media (max-width: 980px) {
-      .hero {
-        grid-template-columns: 1fr;
-      }
-
-      .topbar {
-        border-radius: 16px;
-      }
-
-      .logo-card img {
-        max-height: 320px;
-      }
-
-      .grid {
-        grid-template-columns: 1fr 1fr;
-      }
+      .hero { grid-template-columns: 1fr; }
+      .topbar { border-radius: 16px; }
+      .logo-card img { max-height: 320px; }
+      .grid { grid-template-columns: 1fr 1fr; }
     }
 
     @media (max-width: 640px) {
-      .shell {
-        width: min(1120px, 94vw);
-      }
-
+      .shell { width: min(1120px, 94vw); }
       .topbar {
         justify-content: center;
         flex-direction: column;
         gap: 0.5rem;
         padding: 0.75rem;
       }
-
-      .brand-mark {
-        margin: 0;
-      }
-
-      .nav-links {
-        justify-content: center;
-      }
-
-      .hero-panel,
-      .logo-card,
-      .contact {
-        padding: 1.2rem;
-      }
-
-      .grid {
-        grid-template-columns: 1fr;
-      }
-
-      .submit-btn {
-        width: 100%;
-      }
+      .brand-mark { margin: 0; }
+      .nav-links { justify-content: center; }
+      .hero-panel, .logo-card, .contact { padding: 1.2rem; }
+      .grid { grid-template-columns: 1fr; }
+      .submit-btn { width: 100%; }
     }
   </style>
 </head>
